--- a/BlazorApp/appsettings.json
+++ b/BlazorApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=mobilesdb;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=192.168.0.135\\SQLEXPESS,1433;Initial Catalog=Footballers;User ID=sa;Password=1Secure*Password1;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
